test_suite5/ALAN/test_suite/alan-2022-examples/failing/003520_mutation.alan
source Z begin if 623 then relax elsif 9 then end end
